--- a/Startup/SDK/sdk-settings.json
+++ b/Startup/SDK/sdk-settings.json
@@ -8,7 +8,7 @@
       "FLASK_ENV": "development"
     },
     "volumes": {
-      "D:/MyProjects/assembler/Backend": {
+      "/home/eugenekormin/MyProjects/assembler/Backend": {
         "bind": "/app",
         "mode": "rw"
       }
